# sparkles

./: Cargo.toml  README.md  TUTORIAL.md
example-app/: Cargo.toml
example-app/src/: main.rs
examples/: hello-world.rs
examples/templates/: hello-world.html
sparkles/: Cargo.toml
sparkles-macros/: Cargo.toml
sparkles-macros/src/: lib.rs
sparkles/src/: lib.rs  main.rs
src/: error.rs  lib.rs  main.rs  request.rs  response.rs  response_builder.rs  route.rs  route.rs.bk  server.rs  server.rs.bk  status.rs
