[package]
name = "sparkles"
version = "0.1.0"
authors = ["steveklabnik <steve@steveklabnik.com>"]
description = "✨ is a web \"framework\". A little router and some handlebars templates. Nothing fancy."
license = "MIT/Apache-2.0"

[dependencies]
slog = "1.4.1"
slog-term = "1.3.5"
futures = "0.1.7"
regex = "0.2.1"
reqwest = "0.4.0"
serde_json = "0.9.0"
futures-cpupool = "0.1.4"

[dependencies.hyper]
branch = "master"
git = "https://github.com/hyperium/hyper"

[dependencies.handlebars]
features = ["serde_type"]
version = "0.25.0"